--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -58,25 +58,14 @@
                 android:layout_width="152dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
-                android:text="Button"
-                android:textSize="17dp"
-                app:layout_constraintBottom_toTopOf="@+id/button8"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/evenNum"/>
-
-            <Button
-                android:id="@+id/button8"
-                style="@style/Widget.Material3.Button.ElevatedButton"
-                android:layout_width="152dp"
-                android:layout_height="59dp"
-                android:layout_weight="1"
-                android:text="Button"
+                android:text="Word Pairs"
                 android:textSize="17dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button7"/>
+                app:layout_constraintTop_toBottomOf="@+id/evenNum"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
